package w02;

import w02.Line.Position;

public interface Linable
{
    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();
}